tests/ui/comparison-expressions/comparison-types.stderr
error[E0308]: mismatched types
  --> $DIR/comparison-types.rs:43:31
   |
LL |     let result_7: bool = l == m;
   |                          -    ^ expected `f32`, found `i32`
   |                          |
   |                          expected because this is `f32`
   |
help: you can convert an `i32` to an `f32`, producing the floating point representation of the integer, rounded if necessary
   |
LL |     let result_7: bool = l == m as f32;
   |                                 ++++++

error[E0308]: mismatched types
  --> $DIR/comparison-types.rs:49:31
   |
LL |     let result_8: bool = n == o;
   |                          -    ^ expected `i64`, found `i32`
   |                          |
   |                          expected because this is `i64`
   |
help: you can convert an `i32` to an `i64`
   |
LL |     let result_8: bool = n == o.into();
   |                                +++++++

error[E0308]: mismatched types
  --> $DIR/comparison-types.rs:56:31
   |
LL |     let result_9: bool = p == q;
   |                          -    ^ expected `i64`, found `bool`
   |                          |
   |                          expected because this is `i64`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
